--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -55,6 +55,7 @@
             "firstname": "First Name is required",
             "lastname": "Last Name is required",
             "gender": "Gender is required",
+            "files": "Files is required",
             "email": "E-mail is required",
             "description": "Description  is required"
         },
@@ -71,5 +72,18 @@
         "button-1": "Button 1",
         "button-2": "Button 2",
         "button-3": "Button 3"
+    },
+
+    "card-1": {
+        "title": "Button 1 => Modal 1",
+        "description": "This is button 1 that opens test modal with 2 fields: value A and value B<br/><i>Default modal design</i>"
+    },
+    "card-2": {
+        "title": "Button 2 => Modal 2",
+        "description": "This is button 2 that opens test modal with 2 fields: value A and value B.<br /><i>New modal design</i>"
+    },
+    "card-3": {
+        "title": "Button 3 => Modal 3",
+        "description": "This is button 3 that opens new modal with all inputs: text inputs, selects, upload files, description.<br /><i>New modal design</i>"
     }
 }
